<resources>
    <string name="app_name">落和令</string>
    <string name="exit">再按一次，退出软件</string>
    <string name="cancel_string">取消</string>

    <string name="header_text">The Header</string>
    <string name="footer_text">The Footer</string>

    <!--footer-->
    <string name="list_footer_loading">正在加载中…</string>
    <string name="list_footer_network_error">点击重新加载</string>
    <string name="list_footer_end">已经到底了</string>

    <string name="app_key">23325655</string>
    <string name="umeng_appkey">56e30413e0f55a077b0027be</string>
    <string name="hint_write_themtitle">在此处编写主题标题......</string>
    <string name="write_them_contenthint">主题描述......</string>
    <string name="write_them_please">请描述......</string>
    <string name="find_react">互动</string>
    <string name="find_wish_pool">祝愿池</string>
    <string name="find_rank">排行榜</string>
    <string name="find_sys">消息</string>
    <string name="send_wish">发祝愿</string>
    <string name="send">发布</string>
    <string name="send_wish_act">送出祝愿</string>
    <string name="about_user">关于创者</string>
    <string name="luohe">落和令</string>
    <string name="wenling">问令</string>
    <string name="wenfeng">文风</string>
    <string name="share">分享</string>
    <string name="collect">收藏</string>
    <string name="setting">设置</string>
    <string name="my_luohe">我的落和</string>
    <string name="tiem_1s">悬赏时间：%1s</string>
    <string name="common_title">标题</string>
    <string name="common_desc">描述性文字</string>
    <string name="time_45">45分钟之前</string>
    <string name="jiashang">加赏</string>
    <string name="comment">评论</string>
    <string name="report">举报</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="net_error">网络连接错误</string>
    <string name="is_loading">正在加载...</string>
    <string name="str_no_net">请检查网络连接！</string>
    <string name="no_data">亲~,暂无数据!</string>
    <string name="send_success">发送成功</string>
    <string name="send_fail">发送失败</string>
    <string name="tv_send">发送</string>
    <string name="comment_send_suc">评论成功！</string>
    <string name="collect_send_suc">关注成功！</string>
    <string name="collect_send_fail">关注失败！</string>
    <string name="comment_send_fail">评论失败，请稍后重试！</string>
    <string name="report_suc">举报成功！</string>
    <string name="report_fail">举报失败！</string>
    <string name="like_suc">点赞成功！</string>

    <string name="title_activity_regist_setting">title_activity_regist_setting</string>
    <string name="regist_start"><font color="#ff0000"> * </font></string>

</resources>
